Packing Template modified and Template Controller'